ecmascript/parser/tests/test262-error-references/fail/537c4a516d7c8d7f.js.stderr
error: Expected ,, got .
 --> $DIR/tests/test262-parser/fail/537c4a516d7c8d7f.js:1:20
  |
1 | try {} catch ({e: x.a}) {}
  |                    ^

